2006-05-15  Francois Dechelle <francois@dechelle.net>

	* Updated examples w.r.t. Makefile.eyedb with prefixed variables
	* Changed eyedb-post-install.sh (no > /dev/null, using plain configuration)
	* Fixed 8 bytes aligned stack allocation in src/eyedbsm/xdr_p.h for MapHeader

2006-05-03  Eric Viara  <viara@sysra.com>

	* Fixed problems for schema updates
	* Fixed problems in OQL garbage collector
	* Suppressed EYEDB_NUMVERSION in generated ODL

2006-04-12  Francois Dechelle <francois@dechelle.net>

	* Fixed multiple symbols link error, isnan() detection on Mac OS X

2006-03-28  Eric Viara  <viara@sysra.com>

	* Fixed a bug when database has reached its maximum size
	* Fixed a problem with getpid()

2006-03-28  Francois Dechelle <francois@dechelle.net>

	* Fixed some remaining problems w.r.t Mac OS X. Now, runs the 'Getting Started' example.

2006-03-26  Francois Dechelle <francois@dechelle.net>

	* Fixed stack allocation problems on Mac OS X

2006-03-21  Francois Dechelle <francois@dechelle.net>

	* Added tests for timezone (Mac OS X porting)
	* Changed some enum values because of conflicts with ODL and OQL flex/bison tokens

2006-03-17 Francois Dechelle <francois@dechelle.net>

	* Changed configure to use javac instead of jikes on Mac OS X
	* Changed UT_SEM to HAVE_SEMAPHORE_POLICY_SYSV_IPC, a config #define that is guessed by configure.in

2006-03-16 Francois Dechelle <francois@dechelle.net>

	* Changed configure.in to find automatically the integer type that has the same size as a void *; fixed files using pointer_int, that is now pointer_int_t.
	* Changed configure.in to guess the semaphore policy, added a configure argument to force the semaphore policy, plus some sanity check
	* Changed src/eyedb/Architecture.cc to get the architecture from compile builtins.

2006-03-10 Francois Dechelle <francois@dechelle.net>

	* Added m4 macro to check whether PTHREAD_PROCESS_SHARED is supported

2006-03-09 Francois Dechelle <francois@dechelle.net>
