@@ -1,10 +1,0 @@
-
-#ifndef _EYEDB_VERSION_H
-#define _EYEDB_VERSION_H
-
-namespace eyedb {
-  const char *getVersion();
-  unsigned int getVersionNumber();
-}
-
-#endif
