@@ -1,6 +1,6 @@
 /* 
    EyeDB Object Database Management System
-   Copyright (C) 1994-1999,2004,2005 SYSRA
+   Copyright (C) 1994-1999,2004-2006 SYSRA
    
    EyeDB is free software; you can redistribute it and/or
    modify it under the terms of the GNU Lesser General Public
@@ -17,41 +17,20 @@
    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA 
 */
 
-/*
-   Author: Eric Viara <viara@sysra.com>
-*/
+#ifndef _EYEDB_VERSION_H
+#define _EYEDB_VERSION_H
 
-package org.eyedb;
+#define EYEDB_NUMVERSION @EYEDB_NUMVERSION@
+#define EYEDB_MAJOR_VERSION @EYEDB_MAJOR_VERSION@
+#define EYEDB_MINOR_VERSION @EYEDB_MINOR_VERSION@
+#define EYEDB_PATCH_LEVEL @EYEDB_PATCH_LEVEL@
 
-class Version {
-    static String getVersion()
-    {
-	return "@EYEDB_VERSION@";
-    }
+namespace eyedb {
+  inline const char *getVersion() { return "@EYEDB_VERSION@"; }
 
-    static int getVersionNumber()
-    {
-	return @EYEDB_NUMVERSION@;
-    }
+  inline unsigned int getVersionNumber() { return EYEDB_NUMVERSION; }
 
-    static int getMajorVersion()
-    {
-	return @EYEDB_MAJOR_VERSION@;
-    }
-
-    static int getMinorVersion()
-    {
-	return @EYEDB_MINOR_VERSION@;
-    }
-
-    static int getPatchLevel()
-    {
-	return @EYEDB_PATCH_LEVEL@;
-    }
-
-    static String getVersionStatus()
-    {
-	return "@EYEDB_VERSION_STATUS@";
-    }
+  inline const char *getEyedbVersionStatus() { return "@EYEDB_VERSION_STATUS@"; }
 }
 
+#endif
